# sway

./: .env.example  .gitignore  DATABASE.md  Makefile  README.md  pyproject.toml
app/: config.py  constants.py  main.py
apps/api/: .env.example  pyproject.toml
apps/api/api/: __init__.py  api_keys.py  auth.py  availability_shares.py  config.py  google_integration.py  main.py  schemas.py  secret_crypto.py  settings.py  tasks.py
apps/api/tests/: test_availability_shares.py  test_config.py  test_google_centralized.py  test_reminders.py
apps/desktop/: main.py  pyproject.toml
apps/desktop/app/: constants.py  main.py
apps/desktop/app/assets/styles/: dark.qss  light.qss
apps/desktop/app/cloud/: config.py
apps/desktop/app/db/: database.py  schema.sql
apps/desktop/app/models/: task.py
apps/desktop/app/repositories/: sqlite_repo.py  supabase_repo.py
apps/desktop/app/services/: api_key_service.py  auth_service.py  availability_share_service.py  google_api_service.py  google_calendar_service.py  recurrence.py  reminder_service.py  sync_controller.py  sync_service.py  task_service.py
apps/desktop/app/ui/: auth_view.py  availability_view.py  calendar_view.py  google_setup_dialog.py  icon.py  main_window.py  settings_view.py  task_editor_dialog.py
apps/desktop/app/ui/components/: task_card.py
apps/desktop/app/utils/: autostart.py  availability_export.py  datetime_utils.py  ids.py  logger.py  resources.py
apps/desktop/packaging/: build_macos.sh
apps/desktop/tests/: test_central_google.py  test_config.py
deploy/: Caddyfile  setup.sh  sway-api.service  sway-web.service
dev-plans/: hard_purge_plan.md  initial_plan.md
packaging/: build_macos.sh  icon.icns
supabase/: reset_all.sql  reset_google_sync_tokens.sql  (+2 more)
(+66 files in other folders)
