[project]
name = "sway-desktop"
version = "0.1.0"
description = "Sway — a TickTick-style productivity app (PySide6 + SQLite, offline-first)."
readme = "../../README.md"
requires-python = ">=3.12"
dependencies = [
    "pyside6>=6.11.1",
    "python-dateutil>=2.9.0.post0",
    "sway-core",
    "supabase>=2.30.1",
]

[tool.uv.sources]
sway-core = { path = "../../packages/core", editable = true }

[project.scripts]
sway = "app.main:main"

[tool.setuptools.packages.find]
include = ["app*"]

[dependency-groups]
dev = [
    "pyinstaller>=6.20.0",
]
